--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="zh">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>音乐播放器</title>
+    <title>Lingyi Player</title>
   </head>
   <body>
     <div id="app"></div>
